testdata/pp11-config_dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "sidecar~172.30.79.25~productpage-v1-f8c8fb8-r69zf.default~default.svc.cluster.local",
     "cluster": "productpage.default",
     "metadata": {
      "version": "v1",
      "ISTIO_PROXY_VERSION": "1.1.0",
      "ISTIO_PROXY_SHA": "istio-proxy:ea9e05a766e5ecf301c44b5f779cbccd675b644d",
      "ISTIO_VERSION": "master-20181108-09-15",
      "kubernetes.io/psp": "ibm-privileged-psp",
      "app": "productpage",
      "pod-template-hash": "9474964",
      "POD_NAME": "productpage-v1-f8c8fb8-r69zf",
      "INTERCEPTION_MODE": "REDIRECT",
      "istio": "sidecar"
     },
     "build_version": "ea9e05a766e5ecf301c44b5f779cbccd675b644d/1.9.0-dev/Clean/RELEASE"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "route_config": {
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "prometheus_stats"
                 },
                 "match": {
                  "prefix": "/stats/prometheus"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            },
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats"
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot.istio-system",
          "port_value": 15010
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "http2_protocol_options": {},
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin.istio-system",
          "port_value": 9411
         }
        }
       ]
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "collector_cluster": "zipkin"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "_rq(_(\\d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      }
     ],
     "use_all_default_tags": false
    }
   },
   "last_updated": "2018-11-09T20:53:06.361Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ClustersConfigDump",
   "version_info": "2018-11-09T21:01:17Z/25",
   "static_clusters": [
    {
     "cluster": {
      "name": "prometheus_stats",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2018-11-09T20:53:06.371Z"
    },
    {
     "cluster": {
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot.istio-system",
         "port_value": 15010
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "http2_protocol_options": {},
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2018-11-09T20:53:06.372Z"
    },
    {
     "cluster": {
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin.istio-system",
         "port_value": 9411
        }
       }
      ]
     },
     "last_updated": "2018-11-09T20:53:06.373Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "BlackHoleCluster",
      "connect_timeout": "1s"
     },
     "last_updated": "2018-11-09T20:53:07.126Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "1s",
      "lb_policy": "ORIGINAL_DST_LB"
     },
     "last_updated": "2018-11-09T20:53:07.127Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "inbound|15020||mgmtCluster",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15020
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.126Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "inbound|9080||productpage.default.svc.cluster.local",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 9080
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.125Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.117Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        },
        "alpn_protocols": [
         "istio",
         "h2"
        ]
       },
       "sni": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.120Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.113Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.114Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.110Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.110Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.111Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.112Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.106Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.112Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.109Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.122Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.105Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|443||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.101Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.108Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.124Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|443||kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|443||kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.092Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.122Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.123Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.114Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|80||headers.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||headers.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.094Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.104Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.107Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|80||myclient.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|80||myclient.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.095Z"
    },
    {
     "version_info": "2018-11-09T21:01:17Z/25",
     "cluster": {
      "name": "outbound|80||myserver.default.global",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "169.62.214.228",
         "port_value": 15443
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         }
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound|80||myserver.default.global"
      },
      "dns_lookup_family": "V4_ONLY"
     },
     "last_updated": "2018-11-09T21:01:17.057Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9080||details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||details.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.097Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9080||productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||productpage.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.098Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9080||reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9080||reviews.default.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.099Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9090||prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9090||prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.125Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.115Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.119Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.123Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9093||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.102Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.115Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9093||istio-policy.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-policy.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.118Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "max_requests_per_connection": 10000,
      "circuit_breakers": {
       "thresholds": [
        {
         "max_requests": 10000
        }
       ]
      }
     },
     "last_updated": "2018-11-09T20:53:07.121Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "cluster": {
      "name": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {}
       },
       "service_name": "outbound|9901||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "1s",
      "circuit_breakers": {
       "thresholds": [
        {}
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2018-11-09T20:53:07.103Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
   "version_info": "2018-11-09T21:01:17Z/25",
   "static_listeners": [
    {
     "listener": {
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "codec_type": "AUTO",
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats",
           "route_config": {
            "virtual_hosts": [
             {
              "name": "backend",
              "routes": [
               {
                "route": {
                 "cluster": "prometheus_stats"
                },
                "match": {
                 "prefix": "/stats/prometheus"
                }
               }
              ],
              "domains": [
               "*"
              ]
             }
            ]
           }
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-09T20:53:06.378Z"
    }
   ],
   "dynamic_active_listeners": [
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.30.79.25_9080",
      "address": {
       "socket_address": {
        "address": "172.30.79.25",
        "port_value": 9080
       }
      },
      "filter_chains": [
       {
        "filter_chain_match": {
         "application_protocols": [
          "istio"
         ]
        },
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2",
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "forward_client_cert_details": "APPEND_FORWARD",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "istio_authn",
             "config": {
              "policy": {
               "peers": [
                {
                 "mtls": {
                  "mode": "PERMISSIVE"
                 }
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {}
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "destination.port": {
                 "int64_value": "9080"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB5PGQ=="
                },
                "destination.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            }
           },
           "route_config": {
            "name": "inbound|9080||productpage.default.svc.cluster.local",
            "validate_clusters": false,
            "virtual_hosts": [
             {
              "routes": [
               {
                "decorator": {
                 "operation": "productpage.default.svc.cluster.local:9080/*"
                },
                "route": {
                 "cluster": "inbound|9080||productpage.default.svc.cluster.local",
                 "timeout": "0s",
                 "max_grpc_timeout": "0s"
                },
                "match": {
                 "prefix": "/"
                },
                "per_filter_config": {
                 "mixer": {
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.name": {
                     "string_value": "productpage"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/productpage"
                    },
                    "destination.service.host": {
                     "string_value": "productpage.default.svc.cluster.local"
                    }
                   }
                  }
                 }
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "inbound|http|9080"
             }
            ]
           },
           "stat_prefix": "172.30.79.25_9080",
           "use_remote_address": false
          }
         }
        ]
       },
       {
        "filter_chain_match": {},
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "stat_prefix": "172.30.79.25_9080",
           "use_remote_address": false,
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "forward_client_cert_details": "APPEND_FORWARD",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "istio_authn",
             "config": {
              "policy": {
               "peers": [
                {
                 "mtls": {
                  "mode": "PERMISSIVE"
                 }
                }
               ]
              }
             }
            },
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "default": {}
              },
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "inbound"
                },
                "destination.port": {
                 "int64_value": "9080"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "destination.namespace": {
                 "string_value": "default"
                },
                "destination.ip": {
                 "bytes_value": "AAAAAAAAAAAAAP//rB5PGQ=="
                },
                "destination.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "route_config": {
            "name": "inbound|9080||productpage.default.svc.cluster.local",
            "validate_clusters": false,
            "virtual_hosts": [
             {
              "routes": [
               {
                "decorator": {
                 "operation": "productpage.default.svc.cluster.local:9080/*"
                },
                "route": {
                 "max_grpc_timeout": "0s",
                 "cluster": "inbound|9080||productpage.default.svc.cluster.local",
                 "timeout": "0s"
                },
                "per_filter_config": {
                 "mixer": {
                  "mixer_attributes": {
                   "attributes": {
                    "destination.service.namespace": {
                     "string_value": "default"
                    },
                    "destination.service.name": {
                     "string_value": "productpage"
                    },
                    "destination.service.uid": {
                     "string_value": "istio://default/services/productpage"
                    },
                    "destination.service.host": {
                     "string_value": "productpage.default.svc.cluster.local"
                    }
                   }
                  }
                 }
                },
                "match": {
                 "prefix": "/"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "inbound|http|9080"
             }
            ]
           },
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      },
      "listener_filters": [
       {
        "name": "envoy.listener.tls_inspector"
       }
      ]
     },
     "last_updated": "2018-11-09T20:53:07.199Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.219.94_15443",
      "address": {
       "socket_address": {
        "address": "172.21.219.94",
        "port_value": 15443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             }
            }
           },
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.201Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.201.78_15011",
      "address": {
       "socket_address": {
        "address": "172.21.201.78",
        "port_value": 15011
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-pilot"
             },
             "destination.service.host": {
              "string_value": "istio-pilot.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-pilot"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             }
            }
           },
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
           "cluster": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.203Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.119.83_443",
      "address": {
       "socket_address": {
        "address": "172.21.119.83",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-sidecar-injector"
             },
             "destination.service.host": {
              "string_value": "istio-sidecar-injector.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istio-sidecar-injector"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.205Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.110.68_443",
      "address": {
       "socket_address": {
        "address": "172.21.110.68",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-egressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-egressgateway"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           },
           "transport": {
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-egressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n",
              "path": "/dev/stdout"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.206Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.219.94_443",
      "address": {
       "socket_address": {
        "address": "172.21.219.94",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.207Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.219.94_31400",
      "address": {
       "socket_address": {
        "address": "172.21.219.94",
        "port_value": 31400
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "destination.service.name": {
              "string_value": "istio-ingressgateway"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-ingressgateway"
             },
             "destination.service.host": {
              "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.209Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.56.140_42422",
      "address": {
       "socket_address": {
        "address": "172.21.56.140",
        "port_value": 42422
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            }
           },
           "mixer_attributes": {
            "attributes": {
             "destination.service.name": {
              "string_value": "istio-telemetry"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-telemetry.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-telemetry"
             }
            }
           },
           "disable_check_calls": true
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local",
           "cluster": "outbound|42422||istio-telemetry.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.210Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.123.252_53",
      "address": {
       "socket_address": {
        "address": "172.21.123.252",
        "port_value": 53
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
           },
           "mixer_attributes": {
            "attributes": {
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istiocoredns"
             },
             "destination.service.host": {
              "string_value": "istiocoredns.istio-system.svc.cluster.local"
             },
             "destination.service.name": {
              "string_value": "istiocoredns"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             }
            }
           },
           "disable_check_calls": true
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "outbound|53||istiocoredns.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|53||istiocoredns.istio-system.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.210Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.0.1_443",
      "address": {
       "socket_address": {
        "address": "172.21.0.1",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "destination.service.namespace": {
              "string_value": "default"
             },
             "destination.service.name": {
              "string_value": "kubernetes"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://default/services/kubernetes"
             },
             "destination.service.host": {
              "string_value": "kubernetes.default.svc.cluster.local"
             }
            }
           },
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "stat_prefix": "outbound|443||kubernetes.default.svc.cluster.local",
           "cluster": "outbound|443||kubernetes.default.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.211Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.85.29_443",
      "address": {
       "socket_address": {
        "address": "172.21.85.29",
        "port_value": 443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            }
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-galley"
             },
             "destination.service.host": {
              "string_value": "istio-galley.istio-system.svc.cluster.local"
             },
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-galley"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|443||istio-galley.istio-system.svc.cluster.local",
           "cluster": "outbound|443||istio-galley.istio-system.svc.cluster.local",
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.212Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.21.110.68_15443",
      "address": {
       "socket_address": {
        "address": "172.21.110.68",
        "port_value": 15443
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "mixer",
          "config": {
           "transport": {
            "network_fail_policy": {
             "policy": "FAIL_CLOSE"
            },
            "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
            "attributes_for_mixer_proxy": {
             "attributes": {
              "source.uid": {
               "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
              }
             }
            },
            "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
           },
           "disable_check_calls": true,
           "mixer_attributes": {
            "attributes": {
             "destination.service.namespace": {
              "string_value": "istio-system"
             },
             "destination.service.name": {
              "string_value": "istio-egressgateway"
             },
             "context.reporter.kind": {
              "string_value": "outbound"
             },
             "context.reporter.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.uid": {
              "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
             },
             "source.namespace": {
              "string_value": "default"
             },
             "destination.service.host": {
              "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
             },
             "destination.service.uid": {
              "string_value": "istio://istio-system/services/istio-egressgateway"
             }
            }
           }
          }
         },
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
           "cluster": "outbound|15443||istio-egressgateway.istio-system.svc.cluster.local",
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.213Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_8080",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 8080
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "rds": {
            "route_config_name": "8080",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_8080",
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.214Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_9090",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "9090",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9090",
           "generate_request_id": true,
           "stream_idle_timeout": "0s"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.216Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_9093",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9093
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "stat_prefix": "0.0.0.0_9093",
           "rds": {
            "route_config_name": "9093",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.217Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_9901",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9901
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "use_remote_address": false,
           "rds": {
            "route_config_name": "9901",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_9901",
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.218Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_15030",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15030
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "rds": {
            "route_config_name": "15030",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_15030",
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.220Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_15032",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15032
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "rds": {
            "route_config_name": "15032",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_15032",
           "use_remote_address": false,
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "config": {
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            }
           }
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.221Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_9080",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9080
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9080",
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "9080"
           },
           "generate_request_id": true,
           "stream_idle_timeout": "0s"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.223Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_15029",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15029
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              },
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "stat_prefix": "0.0.0.0_15029",
           "use_remote_address": false,
           "rds": {
            "route_config_name": "15029",
            "config_source": {
             "ads": {}
            }
           },
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.224Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_9091",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9091
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               }
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "random_sampling": {
             "value": 100
            },
            "overall_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "9091",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_9091",
           "stream_idle_timeout": "0s",
           "generate_request_id": true
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.225Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_15004",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15004
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "transport": {
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_15004",
           "rds": {
            "route_config_name": "15004",
            "config_source": {
             "ads": {}
            }
           },
           "generate_request_id": true,
           "stream_idle_timeout": "0s"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.227Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_8060",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 8060
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "8060",
            "config_source": {
             "ads": {}
            }
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_8060",
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "config": {
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             },
             "name": "mixer"
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.228Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_80",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_80",
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "80"
           },
           "generate_request_id": true,
           "stream_idle_timeout": "0s",
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.229Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_15031",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15031
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              },
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                },
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "route_config_name": "15031",
            "config_source": {
             "ads": {}
            }
           },
           "stat_prefix": "0.0.0.0_15031",
           "use_remote_address": false,
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.230Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "0.0.0.0_15010",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15010
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "tracing": {
            "overall_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 100
            },
            "client_sampling": {
             "value": 100
            },
            "operation_name": "EGRESS"
           },
           "rds": {
            "config_source": {
             "ads": {}
            },
            "route_config_name": "15010"
           },
           "use_remote_address": false,
           "stat_prefix": "0.0.0.0_15010",
           "stream_idle_timeout": "0s",
           "generate_request_id": true,
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "default_destination_service": "default",
              "mixer_attributes": {
               "attributes": {
                "source.namespace": {
                 "string_value": "default"
                },
                "context.reporter.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                },
                "context.reporter.kind": {
                 "string_value": "outbound"
                }
               }
              },
              "forward_attributes": {
               "attributes": {
                "source.uid": {
                 "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                }
               }
              },
              "transport": {
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://productpage-v1-f8c8fb8-r69zf.default"
                 }
                }
               },
               "check_cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
               "network_fail_policy": {
                "policy": "FAIL_CLOSE"
               },
               "report_cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local"
              },
              "service_configs": {
               "default": {
                "disable_check_calls": true
               }
              }
             }
            },
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.232Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "172.30.79.25_15020",
      "address": {
       "socket_address": {
        "address": "172.30.79.25",
        "port_value": 15020
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "cluster": "inbound|15020||mgmtCluster",
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout",
              "format": "[%START_TIME%] %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_REMOTE_ADDRESS% %REQUESTED_SERVER_NAME%\n"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "stat_prefix": "inbound|15020||mgmtCluster"
          }
         }
        ]
       }
      ],
      "deprecated_v1": {
       "bind_to_port": false
      }
     },
     "last_updated": "2018-11-09T20:53:07.232Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "listener": {
      "name": "virtual",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15001
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "config": {
           "stat_prefix": "PassthroughCluster",
           "cluster": "PassthroughCluster"
          }
         }
        ]
       }
      ],
      "use_original_dst": true
     },
     "last_updated": "2018-11-09T20:53:07.232Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "name": "inbound|9080||productpage.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|9080",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T20:53:07.198Z"
    },
    {
     "route_config": {
      "name": "inbound|9080||productpage.default.svc.cluster.local",
      "virtual_hosts": [
       {
        "name": "inbound|http|9080",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "inbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T20:53:07.196Z"
    },
    {
     "route_config": {
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-09T20:53:06.378Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "15010",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:15010",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:15010",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:15010",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:15010",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:15010",
         "172.21.201.78",
         "172.21.201.78:15010"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:15010/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.227Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "15031",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15031",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15031",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15031",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15031",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15031",
         "172.21.219.94",
         "172.21.219.94:15031"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15031/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.227Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "8060",
      "virtual_hosts": [
       {
        "name": "istio-citadel.istio-system.svc.cluster.local:8060",
        "domains": [
         "istio-citadel.istio-system.svc.cluster.local",
         "istio-citadel.istio-system.svc.cluster.local:8060",
         "istio-citadel.istio-system",
         "istio-citadel.istio-system:8060",
         "istio-citadel.istio-system.svc.cluster",
         "istio-citadel.istio-system.svc.cluster:8060",
         "istio-citadel.istio-system.svc",
         "istio-citadel.istio-system.svc:8060",
         "172.21.222.93",
         "172.21.222.93:8060"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-citadel.istio-system.svc.cluster.local:8060/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    },
    {
     "version_info": "2018-11-09T21:01:17Z/25",
     "route_config": {
      "name": "80",
      "virtual_hosts": [
       {
        "name": "headers.default.svc.cluster.local:80",
        "domains": [
         "headers.default.svc.cluster.local",
         "headers.default.svc.cluster.local:80",
         "headers",
         "headers:80",
         "headers.default.svc.cluster",
         "headers.default.svc.cluster:80",
         "headers.default.svc",
         "headers.default.svc:80",
         "headers.default",
         "headers.default:80",
         "172.21.241.53",
         "172.21.241.53:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||headers.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "headers.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "headers"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/headers"
              },
              "destination.service.host": {
               "string_value": "headers.default.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "headers"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/headers"
              },
              "destination.service.host": {
               "string_value": "headers.default.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-egressgateway.istio-system.svc.cluster.local:80",
        "domains": [
         "istio-egressgateway.istio-system.svc.cluster.local",
         "istio-egressgateway.istio-system.svc.cluster.local:80",
         "istio-egressgateway.istio-system",
         "istio-egressgateway.istio-system:80",
         "istio-egressgateway.istio-system.svc.cluster",
         "istio-egressgateway.istio-system.svc.cluster:80",
         "istio-egressgateway.istio-system.svc",
         "istio-egressgateway.istio-system.svc:80",
         "172.21.110.68",
         "172.21.110.68:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||istio-egressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-egressgateway.istio-system.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-egressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-egressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-egressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-egressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-egressgateway"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:80",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:80",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:80",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:80",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:80",
         "172.21.219.94",
         "172.21.219.94:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "myclient.default.svc.cluster.local:80",
        "domains": [
         "myclient.default.svc.cluster.local",
         "myclient.default.svc.cluster.local:80",
         "myclient",
         "myclient:80",
         "myclient.default.svc.cluster",
         "myclient.default.svc.cluster:80",
         "myclient.default.svc",
         "myclient.default.svc:80",
         "myclient.default",
         "myclient.default:80",
         "172.21.223.247",
         "172.21.223.247:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myclient.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myclient.default.svc.cluster.local:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/myclient"
              },
              "destination.service.host": {
               "string_value": "myclient.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myclient"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myclient.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/myclient"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myclient"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "myserver.default.global:80",
        "domains": [
         "myserver.default.global",
         "myserver.default.global:80",
         "127.255.0.3",
         "127.255.0.3:80"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|80||myserver.default.global",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "myserver.default.global:80/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver.default.global"
              },
              "destination.service.host": {
               "string_value": "myserver.default.global"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "myserver.default.global"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "myserver.default.global"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.227Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "9901",
      "virtual_hosts": [
       {
        "name": "istio-galley.istio-system.svc.cluster.local:9901",
        "domains": [
         "istio-galley.istio-system.svc.cluster.local",
         "istio-galley.istio-system.svc.cluster.local:9901",
         "istio-galley.istio-system",
         "istio-galley.istio-system:9901",
         "istio-galley.istio-system.svc.cluster",
         "istio-galley.istio-system.svc.cluster:9901",
         "istio-galley.istio-system.svc",
         "istio-galley.istio-system.svc:9901",
         "172.21.85.29",
         "172.21.85.29:9901"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-galley.istio-system.svc.cluster.local:9901/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-galley"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "8080",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:8080",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:8080",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:8080",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:8080",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:8080",
         "172.21.201.78",
         "172.21.201.78:8080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:8080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.230Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "9090",
      "virtual_hosts": [
       {
        "name": "prometheus.istio-system.svc.cluster.local:9090",
        "domains": [
         "prometheus.istio-system.svc.cluster.local",
         "prometheus.istio-system.svc.cluster.local:9090",
         "prometheus.istio-system",
         "prometheus.istio-system:9090",
         "prometheus.istio-system.svc.cluster",
         "prometheus.istio-system.svc.cluster:9090",
         "prometheus.istio-system.svc",
         "prometheus.istio-system.svc:9090",
         "172.21.124.91",
         "172.21.124.91:9090"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9090||prometheus.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "prometheus.istio-system.svc.cluster.local:9090/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "prometheus.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/prometheus"
              },
              "destination.service.name": {
               "string_value": "prometheus"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/prometheus"
              },
              "destination.service.host": {
               "string_value": "prometheus.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "prometheus"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.230Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "9091",
      "virtual_hosts": [
       {
        "name": "istio-policy.istio-system.svc.cluster.local:9091",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:9091",
         "istio-policy.istio-system",
         "istio-policy.istio-system:9091",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:9091",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:9091",
         "172.21.126.128",
         "172.21.126.128:9091"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:9091/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:9091",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:9091",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:9091",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:9091",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:9091",
         "172.21.56.140",
         "172.21.56.140:9091"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:9091/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "9093",
      "virtual_hosts": [
       {
        "name": "istio-citadel.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-citadel.istio-system.svc.cluster.local",
         "istio-citadel.istio-system.svc.cluster.local:9093",
         "istio-citadel.istio-system",
         "istio-citadel.istio-system:9093",
         "istio-citadel.istio-system.svc.cluster",
         "istio-citadel.istio-system.svc.cluster:9093",
         "istio-citadel.istio-system.svc",
         "istio-citadel.istio-system.svc:9093",
         "172.21.222.93",
         "172.21.222.93:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-citadel.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-citadel.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-citadel"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-citadel"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-citadel.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-citadel"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-galley.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-galley.istio-system.svc.cluster.local",
         "istio-galley.istio-system.svc.cluster.local:9093",
         "istio-galley.istio-system",
         "istio-galley.istio-system:9093",
         "istio-galley.istio-system.svc.cluster",
         "istio-galley.istio-system.svc.cluster:9093",
         "istio-galley.istio-system.svc",
         "istio-galley.istio-system.svc:9093",
         "172.21.85.29",
         "172.21.85.29:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-galley.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-galley.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-galley"
              },
              "destination.service.host": {
               "string_value": "istio-galley.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-galley"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-pilot.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-pilot.istio-system.svc.cluster.local",
         "istio-pilot.istio-system.svc.cluster.local:9093",
         "istio-pilot.istio-system",
         "istio-pilot.istio-system:9093",
         "istio-pilot.istio-system.svc.cluster",
         "istio-pilot.istio-system.svc.cluster:9093",
         "istio-pilot.istio-system.svc",
         "istio-pilot.istio-system.svc:9093",
         "172.21.201.78",
         "172.21.201.78:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-pilot.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-pilot.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-pilot"
              },
              "destination.service.host": {
               "string_value": "istio-pilot.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-pilot"
              }
             }
            }
           }
          }
         }
        ]
       },
       {
        "name": "istio-policy.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:9093",
         "istio-policy.istio-system",
         "istio-policy.istio-system:9093",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:9093",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:9093",
         "172.21.126.128",
         "172.21.126.128:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:9093",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:9093",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:9093",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:9093",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:9093",
         "172.21.56.140",
         "172.21.56.140:9093"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9093||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:9093/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              },
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.230Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "15030",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15030",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15030",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15030",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15030",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15030",
         "172.21.219.94",
         "172.21.219.94:15030"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15030/*"
          },
          "per_filter_config": {
           "mixer": {
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "15004",
      "virtual_hosts": [
       {
        "name": "istio-policy.istio-system.svc.cluster.local:15004",
        "domains": [
         "istio-policy.istio-system.svc.cluster.local",
         "istio-policy.istio-system.svc.cluster.local:15004",
         "istio-policy.istio-system",
         "istio-policy.istio-system:15004",
         "istio-policy.istio-system.svc.cluster",
         "istio-policy.istio-system.svc.cluster:15004",
         "istio-policy.istio-system.svc",
         "istio-policy.istio-system.svc:15004",
         "172.21.126.128",
         "172.21.126.128:15004"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-policy.istio-system.svc.cluster.local:15004/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-policy.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-policy"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-policy"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "istio-telemetry.istio-system.svc.cluster.local:15004",
        "domains": [
         "istio-telemetry.istio-system.svc.cluster.local",
         "istio-telemetry.istio-system.svc.cluster.local:15004",
         "istio-telemetry.istio-system",
         "istio-telemetry.istio-system:15004",
         "istio-telemetry.istio-system.svc.cluster",
         "istio-telemetry.istio-system.svc.cluster:15004",
         "istio-telemetry.istio-system.svc",
         "istio-telemetry.istio-system.svc:15004",
         "172.21.56.140",
         "172.21.56.140:15004"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-telemetry.istio-system.svc.cluster.local:15004/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-telemetry.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-telemetry"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-telemetry"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "15032",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15032",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15032",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15032",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15032",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15032",
         "172.21.219.94",
         "172.21.219.94:15032"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15032/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "9080",
      "virtual_hosts": [
       {
        "name": "details.default.svc.cluster.local:9080",
        "domains": [
         "details.default.svc.cluster.local",
         "details.default.svc.cluster.local:9080",
         "details",
         "details:9080",
         "details.default.svc.cluster",
         "details.default.svc.cluster:9080",
         "details.default.svc",
         "details.default.svc:9080",
         "details.default",
         "details.default:9080",
         "172.21.69.151",
         "172.21.69.151:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||details.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "details.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "details"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "details.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/details"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "details"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "productpage.default.svc.cluster.local:9080",
        "domains": [
         "productpage.default.svc.cluster.local",
         "productpage.default.svc.cluster.local:9080",
         "productpage",
         "productpage:9080",
         "productpage.default.svc.cluster",
         "productpage.default.svc.cluster:9080",
         "productpage.default.svc",
         "productpage.default.svc:9080",
         "productpage.default",
         "productpage.default:9080",
         "172.21.141.113",
         "172.21.141.113:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||productpage.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "productpage"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.host": {
               "string_value": "productpage.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/productpage"
              },
              "destination.service.name": {
               "string_value": "productpage"
              },
              "destination.service.namespace": {
               "string_value": "default"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       },
       {
        "name": "reviews.default.svc.cluster.local:9080",
        "domains": [
         "reviews.default.svc.cluster.local",
         "reviews.default.svc.cluster.local:9080",
         "reviews",
         "reviews:9080",
         "reviews.default.svc.cluster",
         "reviews.default.svc.cluster:9080",
         "reviews.default.svc",
         "reviews.default.svc:9080",
         "reviews.default",
         "reviews.default:9080",
         "172.21.32.133",
         "172.21.32.133:9080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|9080||reviews.default.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "reviews.default.svc.cluster.local:9080/*"
          },
          "per_filter_config": {
           "mixer": {
            "forward_attributes": {
             "attributes": {
              "destination.service.name": {
               "string_value": "reviews"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              }
             }
            },
            "mixer_attributes": {
             "attributes": {
              "destination.service.uid": {
               "string_value": "istio://default/services/reviews"
              },
              "destination.service.host": {
               "string_value": "reviews.default.svc.cluster.local"
              },
              "destination.service.namespace": {
               "string_value": "default"
              },
              "destination.service.name": {
               "string_value": "reviews"
              }
             }
            },
            "disable_check_calls": true
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    },
    {
     "version_info": "2018-11-09T20:53:02Z/21",
     "route_config": {
      "name": "15029",
      "virtual_hosts": [
       {
        "name": "istio-ingressgateway.istio-system.svc.cluster.local:15029",
        "domains": [
         "istio-ingressgateway.istio-system.svc.cluster.local",
         "istio-ingressgateway.istio-system.svc.cluster.local:15029",
         "istio-ingressgateway.istio-system",
         "istio-ingressgateway.istio-system:15029",
         "istio-ingressgateway.istio-system.svc.cluster",
         "istio-ingressgateway.istio-system.svc.cluster:15029",
         "istio-ingressgateway.istio-system.svc",
         "istio-ingressgateway.istio-system.svc:15029",
         "172.21.219.94",
         "172.21.219.94:15029"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
           "timeout": "0s",
           "max_grpc_timeout": "0s"
          },
          "decorator": {
           "operation": "istio-ingressgateway.istio-system.svc.cluster.local:15029/*"
          },
          "per_filter_config": {
           "mixer": {
            "mixer_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              }
             }
            },
            "disable_check_calls": true,
            "forward_attributes": {
             "attributes": {
              "destination.service.namespace": {
               "string_value": "istio-system"
              },
              "destination.service.name": {
               "string_value": "istio-ingressgateway"
              },
              "destination.service.host": {
               "string_value": "istio-ingressgateway.istio-system.svc.cluster.local"
              },
              "destination.service.uid": {
               "string_value": "istio://istio-system/services/istio-ingressgateway"
              }
             }
            }
           }
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2018-11-09T21:01:17.229Z"
    }
   ]
  }
 ]
}
